--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,633 @@
 [
   {
+    "Name": "App:ScanTarget",
+    "Description": "",
+    "DataType": "{ Details = 0, Cart =1 }",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Scandit:AppKey",
+    "Description": "",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Scandit:WorkingRange",
+    "Description": "",
+    "DataType": "{ Normal = 0, Long = 1}",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Session:LockTimeout",
+    "Description": "The app will lock after an inactivity of x seconds.",
+    "DataType": "int",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:Enabled",
+    "Description": "Whether to always show the customer attach button in the checkout or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
     "Name": "App:Customer:ShowBarcode",
     "Description": "Determines whether to show the customer barcode in the customer details page or not",
-    "DataType": "boolean",
-    "Default": "false",
-    "Options": [],
-    "Tickets": ["OPTR-1234"]
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowInitials",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowGender",
+    "Description": "Determine whether to show gender customer details page or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:SuggestUpdateAddressOnOpenOrders",
+    "Description": "Whether we open up a special page to suggest the user to update open orders",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-6971"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowAddresses",
+    "Description": "Determine whether to show addresses customer details page or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowPlaceOfBirth",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowDayOfBirth",
+    "Description": "Determines whether to show the date of birth customer details page or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowLanguage",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowBankAccount",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowFiscalID",
+    "Description": "Determines whether to show the fiscal ID on the customer details page or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowPreview",
+    "Description": "Whether to show the customer details page after customer creation or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-3446"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowCompany",
+    "Description": "Whether we show the company fields in the customer create/edit page",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-7935"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowSocialSecurityNumber",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:UseSocialSecurityNumberLookup",
+    "Description": "Whether the social security number functionality is enabled or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-1672"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Customer:ShowVerifyOnCFDButton",
+    "Description": "Enables the Onboarding button in POS create customer where you can trigger customer onboarding on CFD",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:ShowVatNumber",
+    "Description": "Whether to show the vat number tile or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-2435"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:ShowEstimatedDeliveryTime",
+    "Description": "Determines whether we render the delivery proposition card non the checkout or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-5542",
+      " OPTR-4802"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:ShowCustomerReference",
+    "Description": "Determine whether to show the customer reference field when on delivery",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-3244"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:ShowOnlyShippableLines",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Documents:DefaultPrintReceipt",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Documents:DefaultPrintInvoice",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Documents:DefaultEmailInvoice",
+    "Description": "Determines the default value of the email checkbox in the print order pop up ( in the checkout )",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-5327"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Documents:ShowPrintInvoice",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Documents:ShowPrintGiftReceipt",
+    "Description": "Will be used to determine if we show print gift receipt or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-5407"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Search:DefaultMethod",
+    "Description": "",
+    "DataType": "{ Query = 0, CustomID = 1}",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Search:ProductLogicalLevel",
+    "Description": "Determines which logical level to do a product search on",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Search:ProductProperties",
+    "Description": "What product properties to filter on",
+    "DataType": "string[]",
+    "Tickets": [
+      "OPTR-2965"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:AllowPartialShipping",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:StockReservationTask:AvailableActions",
+    "Description": "What actions are available in the stock reservation task",
+    "DataType": "{ ForceComplete = 1, Order = 2, SetAside = 4, Cancel = 8, All = 15 }",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:LineActionTypes:Available",
+    "Description": "",
+    "DataType": "int[]",
+    "Tickets": [
+      "  "
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Subscriptions:Enabled",
+    "Description": "Whether to use the new subscriptions or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-4424"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:StockLabels:Available",
+    "Description": "",
+    "DataType": "int[]",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:StockMutationReasons:Available",
+    "Description": "",
+    "DataType": "int[]",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Basket:EnableNegativeDiscountsOnSalesOrder",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Basket:View",
+    "Description": "",
+    "DataType": "{ ListView = 0, CardView = 1 }",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Search:View",
+    "Description": "Detemines how we show search results in our application",
+    "DataType": "{ ListView = 0, CardView = 1 }",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:LineActionTypes:Visible",
+    "Description": "Whether we should show LineActionType icons on orderline level",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:AlwaysScanStation",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Shipments:AllowRemoteManualReceive",
+    "Description": "Allows receive goods tasks to be confirmed manually",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:WishLists:Enabled",
+    "Description": "Whether we allow the creation of wishlists in this app or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:GiftWrapping:Enabled",
+    "Description": "Whether the application allows order giftwrapping or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Bundles:Behavior",
+    "Description": "How bundles are presented to the user on add (0=Default, 1=Fashion, 2=Disabled)",
+    "DataType": "int",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CycleCount:RequireAllZonesToBeCounted",
+    "Description": "Whether all zones need to be counted in order to complete a zoned cycle count",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CashDrawer:OpenReason",
+    "Description": "",
+    "DataType": "",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:GiftCard:DefaultType",
+    "Description": "The default giftcard type",
+    "DataType": "string",
+    "Tickets": [
+      "OPTR-2220"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CashExpense:WarningThreshold",
+    "Description": "Defines a threshold for the maximum cash expense amount (in the currency of the organization) before a warning should be raised, to prevent mistakes. Defaults to null, which means no warning should be raised.",
+    "DataType": "decimal",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CashExpense:Image:Enabled",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CashJournal:AllowManualCorrections",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:CashJournal:RequestRecount",
+    "Description": "Based on the boolean, the app will request a recount before creating an automated correction and submitting the count to the server",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Search:DefaultUserTypeOverride",
+    "Description": "The default UserType that should be used when doing a product search.",
+    "DataType": "{ Employee = 1, Customer = 2 }",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Product:ShowProductStatus",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:ProductSearchTemplateID",
+    "Description": "Whenever we have a quick buy option in the checkout, we will use this setting to find quick buy products",
+    "DataType": "int",
+    "Tickets": [
+      "OPTR-7702"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Shipping:ProductSearchTemplateID",
+    "Description": "Based on this, we will show / hide the quick bag select option in the SFS ship page",
+    "DataType": "int",
+    "Tickets": [
+      "OPTR-8915"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:DisplayReturnDenominations",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:FaviconBlobID",
+    "Description": "",
+    "DataType": "guid",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ProductDetail:Properties",
+    "Description": "Example: { \"EVA-Admin\": [\"display_value\", ...], ... }",
+    "DataType": "string (custom)",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:AllowSoldByOverride",
+    "Description": "Detemines whether we show a 'sold by' tile on the checkout or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-7937"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShowStationSelectorOnLogin",
+    "Description": "Whether we show the station selector after login or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-8450"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:AllowPartialPick",
+    "Description": "Whether partial picking is allowed for ship from store (pick) tasks or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-9412"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:PaymentMethods",
+    "Description": "What payment methods to show for ship from store (delivery) tasks",
+    "DataType": "string[]",
+    "Tickets": [
+      "OPTR-9989"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:ShowNetPrices",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:ProductPropertiesToShow",
+    "Description": "Used to instruct the frontend what properties of the product(s) to show in the SFS pick screen",
+    "DataType": "string[]",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:SupportMultipleShipments",
+    "Description": "Whether the SFS flow supports multiple shipments or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-10347"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:FastReservationEnabled",
+    "Description": "App setting for companion app to skip the shopping cart after scanning the QR code of the reservation.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Feature:StockReplenishmentTask:Enabled",
+    "Description": "Whether the runner tasks functionality is enabled or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-3185"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Feature:LockOnOrganizationUnit:Enabled",
+    "Description": "Whether we save the organisation unit logged in with or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-9714"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:ShowSignOrder",
+    "Description": "Whether to show the signature button in the checkout or not",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-2553"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Shipments:RequireReceiveMethodReason",
+    "Description": "New name: Orders:Shipments:RequireReceiveMethodReason",
+    "DataType": "",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
   }
 ]
