--- a/appsettings.json
+++ b/appsettings.json
@@ -629,5 +629,13 @@
     "Tickets": [],
     "Default": "",
     "Options": []
+  },
+  {
+    "Name": "App:ReturnToSupplier:ShipmentCanHaveTrackingCode",
+    "Description": "Indicates if return to supplier shipments can have tracking code.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
   }
 ]
