--- a/appsettings.json
+++ b/appsettings.json
@@ -637,5 +637,13 @@
     "Tickets": [],
     "Default": "",
     "Options": []
+  },
+  {
+    "Name": "App:CashJournal:ShowExpectedAmount",
+    "Description": "Show expected amount when counting cash journals.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
