--- a/appsettings.json
+++ b/appsettings.json
@@ -645,5 +645,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:PrintPriceLabelTask:PrintPriceLabelRequired",
+    "Description": "Indicates if it is required to print a price label task.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
