--- a/appsettings.json
+++ b/appsettings.json
@@ -653,5 +653,21 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:SearchUsers:IncludeCustomers",
+    "Description": "Indicates whether or not to include customers in search results.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "true",
+    "Options": []
+  },
+  {
+    "Name": "App:SearchUsers:IncludeEmployees",
+    "Description": "Indicates whether or not to include employees in search results.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "true",
+    "Options": []
   }
 ]
