--- a/appsettings.json
+++ b/appsettings.json
@@ -669,5 +669,13 @@
     "Tickets": [],
     "Default": "true",
     "Options": []
+  },
+  {
+    "Name": "App:ShipFromStore:PrintReceiptAfterCompletion",
+    "Description": "Indicates whether or not to print receipt after completing the checkout successfully.",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
