feat(settings): add App:Pos:DisableNavigationOnOpenAmount

--- a/appsettings.json
+++ b/appsettings.json
@@ -677,5 +677,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Pos:DisableNavigationOnOpenAmount",
+    "Description": "Indicates whether it is allowed to navigate away from an order with an open amount on the POS",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
