--- a/appsettings.json
+++ b/appsettings.json
@@ -685,5 +685,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Checkout:ShowQuickBuy",
+    "Description": "If the app should force Quick Buy into view or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
