--- a/appsettings.json
+++ b/appsettings.json
@@ -693,5 +693,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Pos:DisplayEndOfDayQuestion",
+    "Description": "Indicates whether or not to display the end of day question on the POS",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
