--- a/appsettings.json
+++ b/appsettings.json
@@ -701,5 +701,29 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Pos:DocumentationBlobCategory",
+    "Description": "Indicates the blob category that holds the in-store documentation",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:EnableNativeKeyboard",
+    "Description": "Indicates whether or not to use the native keyboard",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
+  },
+  {
+    "Name": "App:Pos:DisplayExpectedAmountOnCashJournal",
+    "Description": "Indicates whether or not to display the expected amount when counting a cashjournal",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
