--- a/appsettings.json
+++ b/appsettings.json
@@ -725,5 +725,13 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:Feature:RefundOrder:Enabled",
+    "Description": "Indicates whether or not to display the refund order button on returns",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
+    "Options": []
   }
 ]
