settings for GetConfigurableProductDetail filters

--- a/appsettings.json
+++ b/appsettings.json
@@ -733,5 +733,37 @@
     "Tickets": [],
     "Default": "false",
     "Options": []
+  },
+  {
+    "Name": "App:ConfigurableProduct:FilterProperties",
+    "Description": "Filter properties for GetConfigurableProductDetail. Example: { \"Asian_fit\": [true, ...], ... }",
+    "DataType": "string (custom)",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
+    "Name": "App:ConfigurableProduct:FilterProperty",
+    "Description": "Filter property for GetConfigurableProductDetail",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
+    "Name": "App:ConfigurableProduct:FilterValues",
+    "Description": "Filter values for GetConfigurableProductDetail",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
+  },
+  {
+    "Name": "App:ConfigurableProduct:FilterDefault",
+    "Description": "Filter default for GetConfigurableProductDetail",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": null,
+    "Options": []
   }
 ]
