--- a/appsettings.json
+++ b/appsettings.json
@@ -765,5 +765,21 @@
     "Tickets": [],
     "Default": null,
     "Options": []
+  },
+  {
+    "Name": "App:PrintPriceLabelTask:Enabled",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": true,
+    "Options": []
+  },
+  {
+    "Name": "App:Checkout:AllowChangingShippingMethod",
+    "Description": "",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": false,
+    "Options": []
   }
 ]
