--- a/appsettings.json
+++ b/appsettings.json
@@ -781,5 +781,13 @@
     "Tickets": [],
     "Default": false,
     "Options": []
+  },
+   {
+    "Name": "App:Shipments:AutoGenerateShipmentBackendIDForInterbranchOrders",
+    "Description": "Ignore given backendID on shipment create and generate EVA backendID (only on interbranch)",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
   }
 ]
