add enforce cash expense image setting
OPTR-16350

--- a/appsettings.json
+++ b/appsettings.json
@@ -443,6 +443,16 @@
     "Options": []
   },
   {
+    "Name": "App:CashExpense:Image:Enforced",
+    "Description": "Enforce stores to always include a receipt photo when customers add expenses.",
+    "DataType": "bool",
+    "Tickets": [
+      "OPTR-16350"
+    ],
+    "Default": "",
+    "Options": []
+  },
+  {
     "Name": "App:CashJournal:AllowManualCorrections",
     "Description": "",
     "DataType": "bool",
