added a new setting overruling the user language

--- a/appsettings.json
+++ b/appsettings.json
@@ -799,5 +799,13 @@
     "Tickets": [],
     "Default": "",
     "Options": []
+  },
+  {
+    "Name": "App:OverrulingUserLanguage",
+    "Description": "when populated this language set in this setting over rules the languages set on the user",
+    "DataType": "string",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
   }
 ]
