Setting to determine priority in tasks

--- a/appsettings.json
+++ b/appsettings.json
@@ -807,5 +807,14 @@
     "Tickets": [],
     "Default": "",
     "Options": []
+  }, 
+  {
+    "Name": "{
+    "Name": "App:ShipFromStore:DeterminationType",
+    "Description": "this setting determines which task should be picked first",
+    "DataType": "int",
+    "Tickets": [],
+    "Default": "",
+    "Options": []
   }
 ]
