Update enum to int

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 [
   {
     "Name": "App:ScanTarget",
-    "Description": "",
-    "DataType": "{ Details = 0, Cart =1 }",
+    "Description": "{ Details = 0, Cart = 1 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -17,8 +17,8 @@
   },
   {
     "Name": "App:Scandit:WorkingRange",
-    "Description": "",
-    "DataType": "{ Normal = 0, Long = 1}",
+    "Description": "{ Normal = 0, Long = 1 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -252,8 +252,8 @@
   },
   {
     "Name": "App:Search:DefaultMethod",
-    "Description": "",
-    "DataType": "{ Query = 0, CustomID = 1}",
+    "Description": "{ Query = 0, CustomID = 1 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -286,8 +286,8 @@
   },
   {
     "Name": "App:StockReservationTask:AvailableActions",
-    "Description": "What actions are available in the stock reservation task",
-    "DataType": "{ ForceComplete = 1, Order = 2, SetAside = 4, Cancel = 8, All = 15 }",
+    "Description": "What actions are available in the stock reservation task, { ForceComplete = 1, Order = 2, SetAside = 4, Cancel = 8, All = 15 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -338,16 +338,16 @@
   },
   {
     "Name": "App:Basket:View",
-    "Description": "",
-    "DataType": "{ ListView = 0, CardView = 1 }",
+    "Description": "{ ListView = 0, CardView = 1 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
   },
   {
     "Name": "App:Search:View",
-    "Description": "Detemines how we show search results in our application",
-    "DataType": "{ ListView = 0, CardView = 1 }",
+    "Description": "Detemines how we show search results in our application, { ListView = 0, CardView = 1 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -470,8 +470,8 @@
   },
   {
     "Name": "App:Search:DefaultUserTypeOverride",
-    "Description": "The default UserType that should be used when doing a product search.",
-    "DataType": "{ Employee = 1, Customer = 2 }",
+    "Description": "The default UserType that should be used when doing a product search. { Employee = 1, Customer = 2 }",
+    "DataType": "int",
     "Tickets": [],
     "Default": "",
     "Options": []
