--- a/appsettings.json
+++ b/appsettings.json
@@ -523,7 +523,7 @@
   {
     "Name": "App:ProductDetail:Properties",
     "Description": "Example: { \"EVA-Admin\": [\"display_value\", ...], ... }",
-    "DataType": "string (custom)",
+    "DataType": "object",
     "Tickets": [],
     "Default": "",
     "Options": []
@@ -747,7 +747,7 @@
   {
     "Name": "App:ConfigurableProduct:FilterProperties",
     "Description": "Filter properties for GetConfigurableProductDetail. Example: { \"Asian_fit\": [true, ...], ... }",
-    "DataType": "string (custom)",
+    "DataType": "object",
     "Tickets": [],
     "Default": null,
     "Options": []
