--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
     "Description": "{ Details = 0, Cart = 1 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "1",
     "Options": []
   },
   {
@@ -20,7 +20,7 @@
     "Description": "{ Normal = 0, Long = 1 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "0",
     "Options": []
   },
   {
@@ -28,7 +28,7 @@
     "Description": "The app will lock after an inactivity of x seconds.",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "60",
     "Options": []
   },
   {
@@ -36,7 +36,7 @@
     "Description": "Whether to always show the customer attach button in the checkout or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -44,7 +44,7 @@
     "Description": "Determines whether to show the customer barcode in the customer details page or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -52,7 +52,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -60,7 +60,7 @@
     "Description": "Determine whether to show gender customer details page or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -78,7 +78,7 @@
     "Description": "Determine whether to show addresses customer details page or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -86,7 +86,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -94,7 +94,7 @@
     "Description": "Determines whether to show the date of birth customer details page or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -102,7 +102,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -110,7 +110,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -118,7 +118,7 @@
     "Description": "Determines whether to show the fiscal ID on the customer details page or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -128,7 +128,7 @@
     "Tickets": [
       "OPTR-3446"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -138,7 +138,7 @@
     "Tickets": [
       "OPTR-7935"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -146,7 +146,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -156,7 +156,7 @@
     "Tickets": [
       "OPTR-1672"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -164,7 +164,7 @@
     "Description": "Enables the Onboarding button in POS create customer where you can trigger customer onboarding on CFD",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -174,7 +174,7 @@
     "Tickets": [
       "OPTR-2435"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -185,7 +185,7 @@
       "OPTR-5542",
       " OPTR-4802"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -195,7 +195,7 @@
     "Tickets": [
       "OPTR-3244"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -203,7 +203,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -211,7 +211,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -219,7 +219,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -229,7 +229,7 @@
     "Tickets": [
       "OPTR-5327"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -237,7 +237,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -247,7 +247,7 @@
     "Tickets": [
       "OPTR-5407"
     ],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -255,7 +255,7 @@
     "Description": "{ Query = 0, CustomID = 1 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "0",
     "Options": []
   },
   {
@@ -263,7 +263,7 @@
     "Description": "Determines which logical level to do a product search on",
     "DataType": "string",
     "Tickets": [],
-    "Default": "",
+    "Default": "root",
     "Options": []
   },
   {
@@ -281,7 +281,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -289,17 +289,15 @@
     "Description": "What actions are available in the stock reservation task, { ForceComplete = 1, Order = 2, SetAside = 4, Cancel = 8, All = 15 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "15",
     "Options": []
   },
   {
     "Name": "App:LineActionTypes:Available",
     "Description": "",
     "DataType": "int[]",
-    "Tickets": [
-      "  "
-    ],
-    "Default": "",
+    "Tickets": [],
+    "Default": "1,2,3,4",
     "Options": []
   },
   {
@@ -333,7 +331,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -341,7 +339,7 @@
     "Description": "{ ListView = 0, CardView = 1 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "1",
     "Options": []
   },
   {
@@ -349,7 +347,7 @@
     "Description": "Detemines how we show search results in our application, { ListView = 0, CardView = 1 }",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "1",
     "Options": []
   },
   {
@@ -357,7 +355,7 @@
     "Description": "Whether we should show LineActionType icons on orderline level",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -365,7 +363,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -373,7 +371,7 @@
     "Description": "Allows receive goods tasks to be confirmed manually",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -381,7 +379,7 @@
     "Description": "Whether we allow the creation of wishlists in this app or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -389,7 +387,7 @@
     "Description": "Whether the application allows order giftwrapping or not",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -397,7 +395,7 @@
     "Description": "How bundles are presented to the user on add (0=Default, 1=Fashion, 2=Disabled)",
     "DataType": "int",
     "Tickets": [],
-    "Default": "",
+    "Default": "0",
     "Options": []
   },
   {
@@ -405,15 +403,15 @@
     "Description": "Whether all zones need to be counted in order to complete a zoned cycle count",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
     "Name": "App:CashDrawer:OpenReason",
-    "Description": "",
+    "Description": "{ Hide = 0, Show = 1, Required = 2 }",
     "DataType": "",
     "Tickets": [],
-    "Default": "",
+    "Default": "0",
     "Options": []
   },
   {
@@ -439,7 +437,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -449,7 +447,7 @@
     "Tickets": [
       "OPTR-16350"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -457,7 +455,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -465,7 +463,7 @@
     "Description": "Based on the boolean, the app will request a recount before creating an automated correction and submitting the count to the server",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -509,7 +507,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -525,7 +523,7 @@
     "Description": "Example: { \"EVA-Admin\": [\"display_value\", ...], ... }",
     "DataType": "object",
     "Tickets": [],
-    "Default": "",
+    "Default": "{ \"EVA-Admin\": [\"display_value\"] }",
     "Options": []
   },
   {
@@ -535,7 +533,7 @@
     "Tickets": [
       "OPTR-7937"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -545,7 +543,7 @@
     "Tickets": [
       "OPTR-8450"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -555,7 +553,7 @@
     "Tickets": [
       "OPTR-9412"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -565,7 +563,7 @@
     "Tickets": [
       "OPTR-9989"
     ],
-    "Default": "",
+    "Default": "EVAPAY,CASH",
     "Options": []
   },
   {
@@ -573,7 +571,7 @@
     "Description": "",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -591,7 +589,7 @@
     "Tickets": [
       "OPTR-10347"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -599,7 +597,7 @@
     "Description": "App setting for companion app to skip the shopping cart after scanning the QR code of the reservation.",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -609,7 +607,7 @@
     "Tickets": [
       "OPTR-3185"
     ],
-    "Default": "",
+    "Default": "true",
     "Options": []
   },
   {
@@ -619,7 +617,7 @@
     "Tickets": [
       "OPTR-9714"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -629,7 +627,7 @@
     "Tickets": [
       "OPTR-2553"
     ],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
@@ -645,7 +643,7 @@
     "Description": "Indicates if return to supplier shipments can have tracking code.",
     "DataType": "bool",
     "Tickets": [],
-    "Default": "",
+    "Default": "false",
     "Options": []
   },
   {
