--- a/appsettings.json
+++ b/appsettings.json
@@ -301,6 +301,14 @@
     "Options": []
   },
   {
+    "Name": "App:LineActionTypes:AllowMixing",
+    "Description": "Replaced with the normal setting Orders:AllowMixed",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "true",
+    "Options": []
+  },
+  {
     "Name": "App:Subscriptions:Enabled",
     "Description": "Whether to use the new subscriptions or not",
     "DataType": "bool",
@@ -409,7 +417,7 @@
   {
     "Name": "App:CashDrawer:OpenReason",
     "Description": "{ Hide = 0, Show = 1, Required = 2 }",
-    "DataType": "",
+    "DataType": "int",
     "Tickets": [],
     "Default": "0",
     "Options": []
@@ -812,6 +820,14 @@
     "DataType": "int",
     "Tickets": [],
     "Default": "",
+    "Options": []
+  },
+  {
+    "Name": "App:Order:ShowFiscalID",
+    "Description": "Determines whether to show the fiscal ID on the order or not",
+    "DataType": "bool",
+    "Tickets": [],
+    "Default": "false",
     "Options": []
   }
 ]
